# eu-ai-act-ontology

./: .gitignore  LICENSE  README.md  dcat.ttl  pyproject.toml  requirements.txt
competency_questions/: competency_questions.json
concept_extraction/: concepts.json
concept_mappings/: mappings.json
config/: api_configs.json
doc/: document.md  documentation.md
evaluated_competency_questions/: cqs_sparqls.md
figures/: project_architecture.md  project_architecture.mmd
memory/declarative/prompts/: prompt_1.txt  prompt_10.txt  prompt_11.txt  prompt_12.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  (+4 more)
memory/procedural/: ai_act_full_content.json  eu_ai_act_2024.json
metrics/: basic_metrics.py  domain_ontology_structural_metrics_after_mapping.csv  domain_ontology_structural_metrics_before_mapping.csv
modified_neogpt_prompts/: prompt_2.txt  prompt_5.txt  prompt_6.txt  prompt_9.txt
ontology/: proof_of_concept_ontology.ttl  proof_of_concept_ontology_v0.1.ttl  proof_of_concept_ontology_v0.2.ttl  proof_of_concept_ontology_v0.3.ttl
prompts/: prompt_1.txt  prompt_7.txt
src/: __init__.py  main.py  utils.py
src/client/: README.md  __init__.py  client_access.py  ui.py
src/host/: README.md  __init__.py  llm_planner.py  mcp_client.py  validation_controller.py
src/memory/: __init__.py  declarative_memory.py  memory.py  memory_generator.py  onto_memory.py  procedural_memory.py
src/presentation/: README.md  __init__.py  web_ui.py
src/server/: README.md  __init__.py  onto_generator_server.py
src/test/: test_sparql.py
test/: test_sparql.py
(+6 files in other folders)
